# fio-fetcher

./: .gitignore  Cargo.toml  Makefile  README.md  rules.md
examples/: gdrive_clean.rs  gdrive_seed_fake.rs  verify_spreadsheet.rs
src/: fetcher.rs  lib.rs  main.rs
src/client/: api.rs  mod.rs
src/storage/: filesystem.rs  mod.rs
src/storage/gdrive/: auth.rs  drive.rs  mod.rs  sheets.rs  storage_impl.rs  types.rs  util.rs
