[package]
name = "fio-fetcher"
version = "0.1.0"
edition = "2024"
description = "CLI to fetch FIO banka transactions and store them locally or in Google Sheets"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json", "multipart"] }
base64 = "0.22"
dirs = "6"
toml = "0.8"
urlencoding = { version = "2", optional = true }
jsonwebtoken = { version = "9", optional = true }

[features]
default = ["filesystem"]
filesystem = []
gdrive = ["urlencoding", "jsonwebtoken"]

[[example]]
name = "verify_spreadsheet"
path = "examples/verify_spreadsheet.rs"
required-features = ["gdrive"]

[[example]]
name = "gdrive_clean"
path = "examples/gdrive_clean.rs"
required-features = ["gdrive"]

[[example]]
name = "gdrive_seed_fake"
path = "examples/gdrive_seed_fake.rs"
required-features = ["gdrive"]